--- a/Proyecto 1/css/galeria.css
+++ b/Proyecto 1/css/galeria.css
@@ -8,7 +8,7 @@ body{
 }
 a{
     text-decoration: none;
-    color: rgb(170, 143, 22);
+    color: white;
 }
 .esconder{
   display: none;
@@ -38,7 +38,7 @@ a{
 
 }
 .tit-form{
-    margin: 10px;
+    margin: 25px;
 }
 .ti-h4{
     margin: 7px;
@@ -77,6 +77,62 @@ img{
 .icon-cas img {
     width: 35px;
 }
+.cta-button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #c4be11;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+  margin-top: 20px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+.cta-button:hover {
+  background-color: #c3bc00;
+}
+
+form {
+  margin: 0 auto;
+  max-width: 600px;
+  background-color:  #eee;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px  #650c0c;
+}
+
+label {
+  display: block;
+  margin-bottom: 8px;
+  color: #650c0c; 
+}
+
+input, textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid  #650c0c; 
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+
+button {
+  background-color: #c4be11;
+  color: beige;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #45a049;
+}
+
 
 
 section {
